feat(api-server): implement GET encounter-cards with dummy data
minor refactor for common & website: just change `/encounter-cards/{card_id}` to `encounter_card_id`

api-server:
- use ExpeditionUpdate from common instead of independent type
- make expedition move fns async (so they can use async getters etc)
- implement encounterCardDeck fn
